<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.enr</groupId>
  <artifactId>system-sources</artifactId>
  <version>0.0.0-SNAPSHOT</version>

  <name>system-sources</name>
  <url>https://github.com/enr/system-sources</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <build-settings.version>1.2.0</build-settings.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit-pioneer</groupId>
      <artifactId>junit-pioneer</artifactId>
      <version>2.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>4.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.25.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>

    <profile>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <id>default</id>
      <properties>
        <build.profile.id>default</build.profile.id>
        <buildinfo.generate.phase>initialize</buildinfo.generate.phase>
        <surefire.test.phase>test</surefire.test.phase>
        <fmt.check.phase>none</fmt.check.phase>
        <fmt.repair.phase>none</fmt.repair.phase>
      </properties>
    </profile>

    <profile>
      <!-- CI -->
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <id>ci</id>
      <properties>
        <build.profile.id>ci</build.profile.id>
        <surefire.test.phase>test</surefire.test.phase>
        <buildinfo.generate.phase>none</buildinfo.generate.phase>
        <fmt.check.phase>validate</fmt.check.phase>
        <fmt.repair.phase>process-sources</fmt.repair.phase>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.github.enr</groupId>
          <artifactId>build-settings</artifactId>
          <version>${build-settings.version}</version>
        </dependency>
      </dependencies>
      <build>
        <defaultGoal>verify</defaultGoal>
        <plugins>
          <plugin>
            <groupId>net.revelc.code.formatter</groupId>
            <artifactId>formatter-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>fmt-check</id>
                <goals>
                  <goal>validate</goal>
                </goals>
                <phase>${fmt.check.phase}</phase>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>net.revelc.code</groupId>
            <artifactId>impsort-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>fmt-check-imports</id>
                <goals>
                  <goal>check</goal>
                </goals>
                <phase>${fmt.check.phase}</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <!-- mvn -Pfast -->
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <id>fast</id>
      <properties>
        <build.profile.id>fast</build.profile.id>
        <surefire.test.phase>none</surefire.test.phase>
        <buildinfo.generate.phase>none</buildinfo.generate.phase>
        <fmt.check.phase>none</fmt.check.phase>
        <fmt.repair.phase>none</fmt.repair.phase>
      </properties>
      <build>
        <defaultGoal>install</defaultGoal>
      </build>
    </profile>

    <profile>
      <!-- mvn -Pfmt -->
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <id>fmt</id>
      <properties>
        <build.profile.id>fmt</build.profile.id>
        <surefire.test.phase>none</surefire.test.phase>
        <buildinfo.generate.phase>none</buildinfo.generate.phase>
        <fmt.check.phase>none</fmt.check.phase>
        <fmt.repair.phase>process-sources</fmt.repair.phase>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.github.enr</groupId>
          <artifactId>build-settings</artifactId>
          <version>${build-settings.version}</version>
        </dependency>
      </dependencies>
      <build>
        <defaultGoal>process-sources</defaultGoal>
        <plugins>
          <plugin>
            <groupId>net.revelc.code.formatter</groupId>
            <artifactId>formatter-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>fmt-repair</id>
                <goals>
                  <goal>format</goal>
                </goals>
                <phase>${fmt.repair.phase}</phase>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>net.revelc.code</groupId>
            <artifactId>impsort-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>fmt-repair-imports</id>
                <goals>
                  <goal>sort</goal>
                </goals>
                <phase>${fmt.repair.phase}</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>src/main/resources-build</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <executions>
          <execution>
            <id>default-test</id>
            <phase>${surefire.test.phase}</phase>
          </execution>
        </executions>
        <configuration>
          <argLine>
            --add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
        </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>${buildinfo.generate.phase}</phase>
            <configuration>
              <skip>${buildinfo.skip}</skip>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>io.github.git-commit-id</groupId>
          <artifactId>git-commit-id-maven-plugin</artifactId>
          <version>7.0.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
          <configuration>
            <propertiesEncoding>UTF-8</propertiesEncoding>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.16.2</version>
        </plugin>
        <plugin>
          <groupId>org.pitest</groupId>
          <artifactId>pitest-maven</artifactId>
          <version>1.15.7</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.11</version>
        </plugin>
        <plugin>
          <groupId>net.revelc.code.formatter</groupId>
          <artifactId>formatter-maven-plugin</artifactId>
          <version>2.23.0</version>
          <dependencies>
            <dependency>
              <groupId>com.github.enr</groupId>
              <artifactId>build-settings</artifactId>
              <version>1.1.0</version>
            </dependency>
          </dependencies>
          <configuration>
            <!-- paths in build-settings jar -->
            <configFile>fmt/eclipse-formatter-config.xml</configFile>
            <configXmlFile>fmt/xml.properties</configXmlFile>
            <sourceDirectory>.</sourceDirectory>
            <lineEnding>LF</lineEnding>
            <includes>
              <include>**/*.java</include>
              <include>pom.xml</include>
              <include>**/pom.xml</include>
              <include>src/main/resources/*.xml</include>
              <include>src/test/resources/*.xml</include>
            </includes>
            <excludes>
              <exclude>**/generated-sources/**</exclude>
              <exclude>**/generated-test-sources/**</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>net.revelc.code</groupId>
          <artifactId>impsort-maven-plugin</artifactId>
          <version>1.9.0</version>
          <configuration>
            <removeUnused>true</removeUnused>
            <lineEnding>LF</lineEnding>
            <groups>java.,javax.,com.,org.,com.github.enr</groups>
            <staticGroups>java.,javax.,com.,org.,com.github.enr</staticGroups>
            <compliance>17</compliance>
            <excludes>
              <exclude>**/generated-sources/**</exclude>
              <exclude>**/generated-test-sources/**</exclude>
            </excludes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </pluginRepository>
  </pluginRepositories>
</project>
